# ECE285-Project

./: .gitignore  README.ME  README.md  README.zh.md  chat_compare_qwen3_qlora.py  chat_linear_algebra_skill.py  chat_openr1_compare.py  chat_openr1_dataset_eval.py  chatbot.py  eval_compare_qwen3_qlora.py  eval_compare_with_minimax.py  level5compare.py  pyproject.toml  qwen_eval.py  train_qwen3_qlora_manual.py  train_qwen3_qlora_nq.py  train_qwen3_qlora_openr1_math.py
RAG/: README_RAG.md  build_vector_db.py  chunk.py  ece269.index  ece269_concepts_cunks.jsonl  ece269_hw1_chunks.jsonl  ece269_hw2_chunks.jsonl  ece269_hw3_chunks.jsonl  ece269_meta.json  rag_chat.py  retriever.py
skills/linear-algebra-solver/: SKILL.md
skills/linear-algebra-solver/references/: checklist.md  methods.md
skills/linear-algebra-solver/scripts/: verify_linear_algebra.py
