[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ece285-qwen3-qlora-nq"
version = "0.1.0"
description = "QLoRA fine-tuning for Qwen3-0.6B on Google Natural Questions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.49.0",
  "datasets>=2.18.0",
  "accelerate>=0.28.0",
  "peft>=0.12.0",
  "bitsandbytes>=0.43.0",
  "sentencepiece>=0.2.0",
  "tensorboard>=2.14.0",
]

[project.scripts]
train-qwen3-qlora-nq = "train_qwen3_qlora_nq:main"
train-qwen3-qlora-manual = "train_qwen3_qlora_manual:main"
eval-compare-qwen3-qlora = "eval_compare_qwen3_qlora:main"
chat-compare-qwen3-qlora = "chat_compare_qwen3_qlora:main"

[tool.setuptools]
py-modules = ["train_qwen3_qlora_nq", "train_qwen3_qlora_manual", "eval_compare_qwen3_qlora", "chat_compare_qwen3_qlora"]
